# invoice_maker

./: .gitignore  Makefile  docker-compose.yaml
backend/: .gitignore  Dockerfile  entrypoint.sh  install-poetry.py  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/contractors/: admin.py  models.py  serializers.py  urls.py  viewsets.py
backend/contractors/migrations/: 0001_initial.py
backend/invoices/: admin.py  models.py  serializers.py  urls.py  viewsets.py
backend/invoices/migrations/: 0001_initial.py
backend/products/: models.py  serializers.py  urls.py  viewsets.py
backend/products/migrations/: 0001_initial.py
backend/products/tests/: test_product_model.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_superuser.py
backend/utils/: timestamp.py
envs/: backend.default.env  postgres.default.env
proxy/: Dockerfile  default.conf
