[tool.poetry]
name = "invoice-maker"
version = "0.1.0"
description = ""
authors = ["Blazej Bielski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.2"
djangorestframework = "3.14.0"
flake8 = "7.0.0"
pytest = "8.0.2"
pytest-django = "4.8.0"
black = "24.2.0"
pytest-cov = "4.1.0"
Sphinx = "7.2.6"
dj-database-url = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
